--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>1075208090534-54i2b72ue2g8gjq3inaggg852g0h5iib.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.1075208090534-54i2b72ue2g8gjq3inaggg852g0h5iib</string>
 	<key>API_KEY</key>
 	<string>AIzaSyDD2hdwvMLQDMtCwalh61Y0EMomsINu5OI</string>
 	<key>GCM_SENDER_ID</key>
@@ -9,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.duesoon.mobileapp</string>
+	<string>com.ambe.duesoon</string>
 	<key>PROJECT_ID</key>
 	<string>duesoon-2c4ef</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1075208090534:ios:1adf6ac4b7c7f8d06fd567</string>
+	<string>1:1075208090534:ios:128e8492ae198d0e6fd567</string>
 </dict>
 </plist>
